# MiDRR-Classifier

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  tasks.md
.github/workflows/: ci.yml
api/: feedback.py  main.py  requirements.txt  schemas.py
api/routes/: predict.py  session.py
docs/: MiDRR_ML_Development_Plan.md  labeling_rubric.md  telemetry_contract.md
notebooks/: exploration_template.ipynb  synthetic_pipeline.ipynb
src/midrr_classifier/: __init__.py  config.py  data_ingestion.py  data_schema.py  evaluate.py  explainability.py  feature_engineering.py  inference.py  labeling.py  model_definition.py  streaming.py  synth.py  train.py
src/midrr_classifier/utils/: __init__.py  logging_utils.py  metrics.py
tests/: test_api.py  test_data_ingestion.py  test_feature_engineering.py  test_label_contract.py  test_labeling.py  test_model_definition.py  test_streaming.py  test_synth.py
