[tool.poetry]
name = "midrr-classifier"
version = "0.1.0"
description = "Random Forest classifier for Minecraft-based disaster preparedness assessment (MiDRR thesis project)."
authors = ["MiDRR Research Team <research@lspu.edu.ph>"]
readme = "README.md"
packages = [{ include = "midrr_classifier", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0.0"
numpy = ">=1.26.0"
scikit-learn = ">=1.4.0"
joblib = ">=1.3.0"
pyyaml = ">=6.0.0"
matplotlib = ">=3.8.0"
seaborn = ">=0.13.0"
shap = ">=0.44.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
